kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: be-ft-finhub
  namespace: dev
  labels:
    app: be-ft-finhub
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: be-ft-finhub
  template:
    metadata:
      labels:
        app: be-ft-finhub
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: be-ft-finhub
        image: $(IMAGE_REFERENCE)
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 80
