kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: be-ft-finhub-service
  namespace: dev
spec:
  ports:
    - name: https
      protocol: TCP
      port: 443
      targetPort: 80
  selector:
    app: be-ft-finhub
  type: ClusterIP
